--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet JS</title>
 </head>
+
 <body>
-    <h1>Hi</h1>
+    <h3>Création d'un programme javascript qui simule une connexion à un compte bancaire en utilisant uniquement la
+        console pour intéragir avec l'utilisateur .</h3>
     <script src="./public/js/app.js"></script>
 </body>
+
 </html>
